--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,11 +1,18 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <EditTextPreference
-        android:title="@string/pref_location"
-        android:key="@string/pref_location_key"
         android:defaultValue="@string/pref_location_default"
         android:inputType="text"
-        android:singleLine="true" />
+        android:key="@string/pref_location_key"
+        android:singleLine="true"
+        android:title="@string/pref_location" />
+
+    <ListPreference
+        android:defaultValue="@string/pref_temperature_unit_default"
+        android:entries="@array/pref_temperature_unit_list"
+        android:entryValues="@array/pref_temperature_unit_values"
+        android:key="@string/pref_temperature_unit_key"
+        android:title="@string/pref_temperature_unit_title" />
 
     <SwitchPreference
         android:defaultValue="true"
